# SecureComm

./: readme.md
SecureComm/: .env  .gitignore  Project_Structure.md  README.md  TESTSREADME.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
SecureComm/apps/client-electron/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
SecureComm/apps/client-electron/electron/: main.ts
SecureComm/apps/client-electron/src/: App.test.tsx  App.tsx  api.ts  cryptoClient.ts  integration.test.ts  main.tsx  session.test.ts  styles.css
SecureComm/infra/nginx/conf.d/: default.conf
SecureComm/scripts/: lint.sh  test.sh
SecureComm/services/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  setup.cfg  start.sh
SecureComm/services/backend/alembic/: env.py
SecureComm/services/backend/alembic/versions/: 0001_initial.py
SecureComm/services/backend/securecomm_backend/: __init__.py  db.py  dependencies.py  main.py  models.py  schemas.py
SecureComm/services/backend/securecomm_backend/api/: __init__.py  routes.py  websocket.py
SecureComm/services/backend/securecomm_backend/core/: __init__.py  config.py
SecureComm/services/backend/tests/: conftest.py  test_api.py  test_health.py  test_websocket.py
SecureComm/utils/: ver_datos.py
