[metadata]
name = securecomm-backend
version = 0.1.0
description = SecureComm FastAPI backend for store-and-forward messaging.

[options]
packages = find:
install_requires =
    fastapi==0.115.0
    uvicorn[standard]==0.30.5
    gunicorn==22.0.0
    sqlalchemy==2.0.32
    alembic==1.13.2
    pyjwt[crypto]==2.9.0
    psycopg[binary,pool]==3.2.1
    redis==5.0.8
    python-dotenv==1.0.1
    python_requires = >=3.12
    passlib==1.7.4

[options.packages.find]
where = .